--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "VinSenzo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "blessed": "^0.1.81",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.7",
-    "figlet": "^1.8.0"
+    "figlet": "^1.8.0",
+    "uuid": "^11.1.0"
   }
 }
